WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123494
AX: AXFocused not exposed on ARIA menuitems
https://bugs.webkit.org/show_bug.cgi?id=123494
Summary
AX: AXFocused not exposed on ARIA menuitems
James Craig
Reported
2013-10-29 22:40:22 PDT
Created
attachment 215472
[details]
test case demonstrating bug tabindex="-1" is defined on these menuitems, but WebKit does not expose AXFocused. Expected: AXFocused (W): NO
Attachments
test case demonstrating bug
(1.43 KB, text/html)
2013-10-29 22:40 PDT
,
James Craig
no flags
Details
Patch.
(4.71 KB, patch)
2013-10-30 16:58 PDT
,
Samuel White
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-10-29 22:40:37 PDT
<
rdar://problem/15348767
>
James Craig
Comment 2
2013-10-29 22:41:07 PDT
W3C UAIG Blocker:
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA-UAIG/1.0/tests/test-files/test40.html
James Craig
Comment 3
2013-10-29 23:06:28 PDT
related to Webkit
bug 121335
Samuel White
Comment 4
2013-10-30 16:58:51 PDT
Created
attachment 215578
[details]
Patch.
WebKit Commit Bot
Comment 5
2013-10-30 17:29:56 PDT
Comment on
attachment 215578
[details]
Patch. Clearing flags on attachment: 215578 Committed
r158332
: <
http://trac.webkit.org/changeset/158332
>
WebKit Commit Bot
Comment 6
2013-10-30 17:29:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug